--- a/Sigorta Şablon R/style/app.css
+++ b/Sigorta Şablon R/style/app.css
@@ -2,9 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
+
 body{
-    overflow-x: hidden;
+    padding: 0 10px;
+}
+
+button {
+    cursor: pointer !important;
 }
 
 .template-bosluk{
@@ -12,16 +18,29 @@ body{
 }
 
 .align-center {
-    width: 80%;
+    max-width: 1180px;
     margin: 0 auto;
 }
 
 .backGround {
     position: absolute;
     top: 0;
+    right: -368px;
+    z-index: -10;
+    width: 1200px;
+
+    height: auto;
+}
+
+.backGround-2 {
+    display: none;
+
+    position: absolute;
+    top: 0;
     right: 0;
     z-index: -10;
-    width: 70%;
+    width: 63%;
+    
     height: auto;
 }
 
@@ -29,9 +48,15 @@ nav .container-1 {
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    width: 80%;
+    max-width: 1180px;
     padding: 20px 0;
     align-items: center;
+    position: relative;
+}
+
+nav .nav-header {
+    font-size: 40px;
+    font-weight: 700;
 }
 
 nav .nav-header span {
@@ -41,11 +66,12 @@ nav .nav-header span {
 nav .container-1 .container-2 {
     display: flex;
     align-items: center;
-    font-size: 1rem;
+    font-size: 20px;
+    font-weight: 400;
 }
 
-nav .container-1 .container-2 * {
-    margin: 0 10px;
+nav .container-1 .container-2 *:not(a i) {
+    margin: 0 17px;
     color: white;
     text-align: center;
     height: 100%;
@@ -54,27 +80,63 @@ nav .container-1 .container-2 * {
 }
 
 nav .container-1 .container-2 a i {
-    font-size: .6rem;
+    font-size: .9rem;
+    margin-left: 10px;
 }
 
 nav .container-1 .container-2 .border-box {
     border: 1px white solid;
     height: fit-content;
-    padding: 3px 6px;
+    padding: 3px 8px;
     border-radius: 10px;
-    font-size: .8rem;
+    font-size: 17px;
+    font-weight: 500;
+}
+
+nav .container-1 .container-2 i:last-child {
+    margin: 0;
+    margin-left: 5px;
+}
+
+@media (max-width:1921px){
+    .backGround {
+        display: none;
+    }
+
+    .backGround-2 {
+        display: block;
+    }
+
 }
 
 
 /* Banner */
 
 .banner {
-    margin-top: 20px;
+    margin-top: 5.5%;
+    
+}
+
+@media (min-width:1921px){
+    .banner {
+        margin-top: 110px;
+    }
 }
 
 .banner .banner-texts {
     width: 100%;
     padding-right: 55%;
+}
+
+.banner .banner-texts span {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.banner .banner-text h1 {
+    font-size: 45px;
+    font-weight: 700;
 }
 
 .banner .banner-texts *:not(p) {
@@ -83,39 +145,104 @@ nav .container-1 .container-2 .border-box {
 
 .banner .banner-texts p {
     color: #ABAAAB;
-    line-height: 18px;
+    line-height: 27px;
     margin-top: 20px;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.banner .buttons {
+    margin-top: 40px;
 }
 
 .banner .buttons button {
     all: unset;
     
-    width: 130px;
+    width: 200px;
     text-align: center;
-    height: 50px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: 500;
+    height: 70px;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 17px;
 }
 
 .banner .buttons button:first-child {
     background-image: linear-gradient(120deg,#844096,#c74a8f,#D93894);
     color: white;
-    margin-right: 10px;
+    margin-right: 50px;
+    box-shadow: 0px 5px 30px rgb(102, 57, 166,.4);
 }
 
 .banner .buttons button:last-child {
     color: #2D2D2D;
-    box-shadow: 0px 10px 15px rgb(199, 199, 199);
+    box-shadow: 0px 5px 30px rgb(45, 45, 45,.2);
 }
 
 
 .banner .offers {
+
+    margin-top: 100px;
+
     display: grid;
-    grid-template-rows: auto auto auto auto;
+    grid-template-columns: 140px 140px 140px 140px;
+    grid-column-gap: 15px;
 }
 
 .banner .offers .offer {
     
+    background-color: white;
+    box-shadow: 0px 5px 30px rgb(171, 170, 171,.2);
+
+    height: 139px;
+
+    border-radius: 25px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    transition: 1s;
+
 }
 
+.banner .offers .offer img {
+    padding: 20px;
+    box-sizing: content-box;
+    width: 35px;
+    height: 30px;
+    background-color: #DAD9DB;
+    border-radius: 12px;
+    margin-top: 20px;
+}
+
+.banner .offers .offer h6 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    text-align: center;
+    margin: 10px 0;
+}
+
+.banner .offers .offer button {
+    all: unset;
+    display: none;
+    margin: 10px 0;
+    background-image: linear-gradient(180deg,#803B8E,#CC3995);
+    font-size: 10;
+    font-weight: 500;
+    color: white;
+    border-radius: 50px;
+    padding: 5px 10px;
+}
+
+.banner .offers .offer:hover {
+    height: 200px;
+}
+
+.banner .offers .offer:hover button{
+    display: block;
+}
+
+.banner .offers .offer:hover img {
+    background-image: linear-gradient(180deg,#8A3F96,#6B337E,#CE3995);
+}
