--- a/Sigorta Şablon R/style/app.css
+++ b/Sigorta Şablon R/style/app.css
@@ -362,7 +362,7 @@ nav .container-1 .dropdown {
     }
 
     .banner .offers {
-        grid-template-columns: 111px 111px;
+        grid-template-columns: 40% 40%;
         justify-content: center;
     }
 
@@ -417,7 +417,7 @@ nav .container-1 .dropdown {
 
     padding: 24px;
 
-    margin-right: 28px;
+    margin: 14px;
 
     box-shadow: 0px 5px 20px rgb(112, 112, 112, .2);
 
@@ -485,19 +485,69 @@ nav .container-1 .dropdown {
 }
 
 @media (max-width:1150px) {
+
+    .advantages {
+        max-width: 100%;
+    }
+
+    .advantages h2 {
+        font-size: 15px;
+    }
+
     .advantages .slick {
-        width: 100% !important;
-        max-width: 500px;
         margin: 0  auto !important;
     }
 
     .advantages .slick .slick-item {
-        margin: 25px;
+        margin: 30px 75px;
         box-shadow: 0px 5px 30px rgb(102, 57, 166,.5);
+        opacity: 1;
+        height: auto;
+        padding: 58px 24px;
+    }
+
+    .advantages .slick .slick-item h5 {
+        color: #6639A6;
+    }
+
+
+    .advantages .slick .slick-item p {
+        color: black;
     }
 
     .advantages .slick .slick-item span {
         background-image: linear-gradient(#824095,#824E91,#EE3594);
     }
 
+
+
+    .advantages .slick-list {
+        max-width: 500px !important;
+        margin: 0 auto;
+    }
+
+}
+
+@media (max-width:410px) {
+
+    .advantages .slick .slick-item {
+        padding: 19px 24px;
+    }
+
+    .advantages .slick .slick-item span {
+        padding: 20px;
+    }
+
+    .advantages .slick .slick-item span img {
+        width: 100%;
+    }
+
+    .advantages .slick .slick-item h5 {
+        font-size: 12px;
+        margin: 10px 0;
+    }
+
+    .advantages .slick .slick-item p {
+        font-size: 12px;
+    }
 }
